--- a/index.html
+++ b/index.html
@@ -23,34 +23,17 @@
 
     <div>
         We are Crypto Amsterdam. <br><br>
-        
-        We believe the next world war goes beyond borders of politics, but
-        targets our digital identity and freedom of speech.<br>
-        This Trump could be the triumph of many Trumps. And there is no
-        guarantee that any country's future leaders won't abuse today's
-        openness.<br><br>
 
-        Resistance to bad politics isn't done by weapons of destruction.
-        Borders will always move or change, while The Internet will always
-        persist.<br>
-        Sharing knowledge on secure communication is the only way to guarantee
-        the freedom of this network and borderless world.<br><br>
+        You are constantly being watched. All your online activities are
+        being monitored. It targets our digital identity and freedom of speech.
+        <br>
 
-        We distrust any organization claiming to be trustful with our privacy,  
-        and solely rely on tools that are secure by design with end-to-end
-        encryption, and publicly reviewable source code. <br>
+        Sharing knowledge on secure and private communication is the only way to guarantee
+        freedom in this networked and borderless world.<br><br>
 
         It is our mission to make safe communication understood by everyone,
-        and make the concepts just as simple part of our day as locking our
-        house doors. <br>
-        We show you the right tools, without sacrificing usability.  With the
-        ultimate dream to make encryption part of the elementary school's
-        curriculum. <br><br>
+        and make the concepts just as simple as locking our doors. <br><br>
 
-        With everyone connected securely, we can continue the freedom of speech
-        and knowledge the internet has brought us. <br>
-
-        We are the resistance, <br>
-        we are crypto.amsterdam.
+        We solely rely on tools that are secure by design, protect our privacy and are released under an open and liberal license. <br>
     </div>
 </body>
