--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 
         <p>
             It is our mission to make safe communication understood by everyone,
-            and make the concepts just as simple as locking our doors.
+            and make the concepts as simple as locking our doors.
         </p>
 
         <p>
