small change to text

--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
      100% { opacity: 1.0; }
  }
 </style>
+
 <body>
     <div>
         <p class="intro text"> We are Crypto Amsterdam </p>
@@ -65,8 +66,7 @@
         </p>
 
         <p>
-            It is our mission to make safe communication understood by everyone,
-            and make the concepts as simple as locking our doors.
+            We are a group of concerned citizens in and around Amsterdam. It's our mission to make safe and private communication available and understood by everyone.
         </p>
 
         <p>
