changed text and background colors

--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <style>
  body {
      font-family: Monaco, Arial, Helvetica, sans-serif;
-     background:#0f0f0f;
-     color:white;
+     background:#252525;
+     color:#ebebeb;
  }
  div {
      max-width: 400px;
