Publishing to gh-pages (publish.sh)

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
     </div>
 
-    <p class="intro text"> We are Crypto Amsterdam </p>
+    <p class="intro text"> crypto.amsterdam </p>
 
     <p>You are constantly being watched. All your online activities are
 being monitored. It targets our digital identity and freedom of speech.</p>
